--- a/src/ZectranetBundle/Resources/views/projectSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/projectSettings.html.twig
@@ -22,19 +22,45 @@
                 </div>
 
                 <div class="row" style="margin-bottom: 25px;">
-                    <form class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon" cg-busy="visiblePromise">
-                                <input id="change-visible-state" type="checkbox" ng-model="projectVisible" value="{{ project.visible }}">
-                            </span>
-                            <label for="change-visible-state" class="form-control form-control-static">Project visible</label>
-                            <span class="input-group-btn">
-                                <button type="button" class="btn btn-default btn-success" ng-click="changeVisibleState(projectVisible);">Save</button>
-                            </span>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="input-group form-group">
+                                <span class="input-group-addon" cg-busy="visiblePromise">
+                                    <input id="change-visible-state" type="checkbox" ng-model="projectVisible" value="{{ project.visible }}">
+                                </span>
+                                    <label for="change-visible-state" class="form-control form-control-static">Project visible</label>
+                                <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default btn-success" ng-click="changeVisibleState(projectVisible);">Save</button>
+                                </span>
+                                </div>
+                                <div class="input-group">
+                                </div>
+                            </div>
                         </div>
-                        <div class="input-group">
+                        <div class="row" style="margin-top: 15px;">
+                            <div class="col-md-12">
+                                <div class="input-group form-group">
+                                    <input type="text" class="form-control" placeholder="Project name" value="{{ project.name }}">
+                                <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default btn-success" ng-click="changeVisibleState(projectVisible);">Save</button>
+                                </span>
+                                </div>
+                                <div class="input-group">
+                                </div>
+                            </div>
                         </div>
-                    </form>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <textarea class="form-control"  style="height: 64px;" placeholder="Project description">{{ project.description }}</textarea>
+                                    <button type="button" class="form-control btn-success" ng-click="changeVisibleState(projectVisible);">Save</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <ul id="project-manage-tabs" class="nav nav-tabs">
