--- a/src/ZectranetBundle/Resources/views/dialogAdd.html.twig
+++ b/src/ZectranetBundle/Resources/views/dialogAdd.html.twig
@@ -27,7 +27,7 @@
                                     </form>
 
 
-                                    <ul class="list-group list-todo">
+                                    <ul class="list-group list-todo" style="overflow-y: auto;height: 230px;">
                                         <li class="list-group-item" style="padding: 10px 5px 10px 5px;height: 55px;" ng-repeat="document in documents">
                                             <input type="checkbox" class="checkbox checkbox-inline" ng-init="document.checked = false" ng-click="document.checked = !document.checked">
                                             <span>&nbsp;[[ document.name ]]</span>
