--- a/src/ZectranetBundle/Resources/views/filter.html.twig
+++ b/src/ZectranetBundle/Resources/views/filter.html.twig
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li class="divider"></li>
-                    <li ng-repeat="priority in uniqueFilterOptions.priority">
+                    <li ng-repeat="priority in uniqueFilterOptions.priority | filter: filterForPriority">
                         <a style="cursor: pointer;" ng-click="priority.checked = !priority.checked; filterByPriority(priority);">
                             <input type="checkbox" ng-model="priority.checked" class="checkbox checkbox-inline">
                             [[ priority.priority.label ]]
@@ -48,7 +48,7 @@
                     <li><a style="cursor: pointer;" ng-click="tasksOrderBy[2] = null; orderByStatus = 0;">
                             Disable sort by this field</a></li>
                     <li class="divider"></li>
-                    <li ng-repeat="status in uniqueFilterOptions.status">
+                    <li ng-repeat="status in uniqueFilterOptions.status | filter: filterForStatus">
                         <a style="cursor: pointer;" ng-click="status.checked = !status.checked; filterByStatus(status);">
                             <input type="checkbox" ng-model="status.checked" class="checkbox checkbox-inline">
                             [[ status.status.label ]]
