--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -30,7 +30,7 @@
 	{% endblock %}
 </head>
 
-<body ng-cloak>
+<body ng-cloak ng-controller="NavigationController" ng-init="getNotification()">
 
 <div id="wrapper" class="active">
 	<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -133,44 +133,48 @@
 
                                 <li class="text-center" style="margin-top: 5px;"><b>TASKS  <span style="color: violet;">IN-PROGRESS </span></b></li>
 
-                                {% for task in tasksAssigned | slice(0, 1) %}
-                                    <li class="divider"></li>
+                                {% if taskAssigned | length > 0 %}
 
-                                    <li>
-                                        <a href="{{ path('zectranet_task_show', {task_id: task.id}) }}">
-                                            <div>
-                                                <p>
-                                                    <span style="display: inline-block; width: 70%; word-wrap: break-word;"><b>{{ task.name  }}</b></span>
-                                                    <span class="pull-right text-muted" style="display: inline-block; width: 28%; text-align: right;">{{ task.progress }}% Complete</span>
-                                                </p>
-                                                <div class="progress progress-striped active">
-                                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ task.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ task.progress }}%">
+                                    {% for task in tasksAssigned | slice(0, 1) %}
+                                        <li class="divider"></li>
+
+                                        <li>
+                                            <a href="{{ path('zectranet_task_show', {task_id: task.id}) }}">
+                                                <div>
+                                                    <p>
+                                                        <span style="display: inline-block; width: 70%; word-wrap: break-word;"><b>{{ task.name  }}</b></span>
+                                                        <span class="pull-right text-muted" style="display: inline-block; width: 28%; text-align: right;">{{ task.progress }}% Complete</span>
+                                                    </p>
+                                                    <div class="progress progress-striped active">
+                                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ task.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ task.progress }}%">
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                {% endfor %}
+                                            </a>
+                                        </li>
+                                    {% endfor %}
 
-                                {% for task in tasksOwned | slice(0, 2) %}
-                                    <li class="divider"></li>
+                                {% else %}
+                                    {% for task in tasksOwned | slice(0, 3) %}
+                                        <li class="divider"></li>
 
-                                    <li>
-                                        <a href="{{ path('zectranet_task_show', {task_id: task.id}) }}">
-                                            <div>
-                                                <p>
-                                                    <span style="display: inline-block; width: 70%; word-wrap: break-word;"><b>{{ task.name  }}</b></span>
-                                                    <span class="pull-right text-muted" style="display: inline-block; width: 28%; text-align: right;">{{ task.progress }}% Complete</span>
-                                                </p>
-                                                <div class="progress progress-striped active">
-                                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ task.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ task.progress }}%">
+                                        <li>
+                                            <a href="{{ path('zectranet_task_show', {task_id: task.id}) }}">
+                                                <div>
+                                                    <p>
+                                                        <span style="display: inline-block; width: 70%; word-wrap: break-word;"><b>{{ task.name  }}</b></span>
+                                                        <span class="pull-right text-muted" style="display: inline-block; width: 28%; text-align: right;">{{ task.progress }}% Complete</span>
+                                                    </p>
+                                                    <div class="progress progress-striped active">
+                                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ task.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ task.progress }}%">
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                        </a>
-                                    </li>
+                                            </a>
+                                        </li>
 
-                                {% endfor %}
+                                    {% endfor %}
+                                {% endif %}
 
                             {% endif %}
 
@@ -256,7 +260,7 @@
 
                     </li>
 
-                    <li class="dropdown" ng-controller="NavigationController" ng-init="getNotification()">
+                    <li class="dropdown">
 
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							<i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -269,6 +273,16 @@
 
                         <ul ng-if="notifications.length > 0" class="notifier dropdown-menu dropdown-alerts">
                             <li ng-repeat="notification in notifications| limitTo: 5">
+
+                                <a ng-if="(notification.type == 'request_office') || (notification.type == 'request_user_project') || (notification.type == 'request_project') || (notification.type == 'request_assign_task')"
+                                   href="#" style="text-decoration: none; color: #000;">
+                                    <i class="fa fa-question fa-fw"></i>
+                                    <div style="word-wrap: break-word; display: inline-block" ng-bind-html="notification.message"></div>
+                                    <div class="text-muted small" style="text-align: right; margin-top: 10px;">
+                                        <i class="fa fa-clock-o"></i>
+                                        [[ notification.activated.date.substring(0, 16) ]]
+                                    </div>
+                                </a>
 
                                 <a ng-if="(notification.type == 'message_office') || (notification.type == 'message_project') || (notification.type == 'message_task') || (notification.type == 'message_epic_story')
                                     || (notification.type == 'private_message_office') || (notification.type == 'private_message_project') || (notification.type == 'private_message_task') || (notification.type == 'private_message_epic_story')
@@ -287,7 +301,6 @@
                                         [[ notification.activated.date.substring(0, 16) ]]
                                     </div>
                                 </a>
-
 
                                 <div class="divider"></div>
                             </li>
@@ -415,6 +428,29 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-12">
+
+                    {% if app.user.notifications | length > 0 %}
+                        <div ng-if="notifications.length > 0">
+                            <div ng-repeat="notification in notifications | limitTo: 1">
+                                <div class="panel panel-info request" ng-if="(notification.type == 'request_user_project')">
+                                    <div class="panel-body">
+                                        <div ng-bind-html="[[notification.message]]" style="word-wrap: break-word; font-size: 1.2em; color: #0986a3;"></div>
+                                        <div class="text-right" style="margin-top: 10px; padding-top: 20px; border-top: 1px solid #ccc;">
+                                            <div ng-click="acceptRequestUserProject()" class="btn btn-primary" style="margin-right: 20px;">Accept</div>
+                                            <div class="btn btn-default">Decline</div>
+                                        </div>
+                                    </div>
+                                    <div class="panel-footer text-center">
+                                        <a href="#" class="seeAllRequest">
+                                            <strong>See All Requests</strong>
+                                            <i class="fa fa-angle-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+
 					{% block body %}
 					{% endblock %}
 				</div>
@@ -466,7 +502,8 @@
 			notificationsGet: "{{ url('zectranet_notifications_get') }}",
             officeShow: "{{ url('zectranet_show_office', {office_id: 0}) }}",
 			projectShow: "{{ url('zectranet_show_project', {project_id: 0}) }}",
-			taskShow: "{{ url('zectranet_task_show', {task_id: 0}) }}",
+            acceptRequestUserProject : "{{ url('zectranet_accept_request_user_project', { 'project_id': 0 }) }}",
+            taskShow: "{{ url('zectranet_task_show', {task_id: 0}) }}",
 			documentTemplate: "{{ asset('bundles/zectranet/templates/document.html') }}",
             {#checkUserByUsername: "{{ url('intranet_user_check_username') }}",
             registrationAction : "{{ url('intranet_register_action') }}",
