--- a/web/bundles/zectranet/templates/task-agile.html
+++ b/web/bundles/zectranet/templates/task-agile.html
@@ -9,7 +9,7 @@
 
             <div class="list-group">
                 <div class="row" ng-repeat="task in tasks | orderBy: tasksOrderBy | filter: execTaskFilter">
-                    <div class="col-md-12" ng-if="task.parentid == null" ng-init="parentTask = task">
+                    <div class="col-md-12" ng-init="parentTask = task">
                         <span ng-if="task.status.label == 'story'">
                             <a class="list-group-item" style="margin-bottom: 5px;" ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]"
                                ng-class="{
@@ -18,7 +18,6 @@
                                     'local-green': task.priority.id == 1
                                     }">
                                <h4 class="list-group-item-heading">
-
                                     [[ task.name ]]
                                </h4>
                                <p class="list-group-item-text">
@@ -30,13 +29,13 @@
                                </p>
                             </a>
                         </span>
-                        <span ng-repeat="task in task.subtasks">
+                        <span ng-repeat="task in task.subtasks | orderBy: tasksOrderBy | filter: execTaskFilter">
                             <a ng-if="task.status.label == 'story'" class="list-group-item" ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]"
                                ng-class="{
                                     'local-red': task.priority.id == 3,
-                                                                'local-yellow': task.priority.id == 2,
-                                                                'local-green': task.priority.id == 1
-                                                                }" style="margin-bottom: 5px;">
+                                    'local-yellow': task.priority.id == 2,
+                                    'local-green': task.priority.id == 1
+                                    }" style="margin-bottom: 5px;">
                                <h4 class="list-group-item-heading">
                                    <span style="color: black;">
                                         [[ parentTask.id ]].[[ $index + 1 ]]<span ng-if="task.type.label == 'bug'">[['.B']]</span><span ng-if="task.type.label == 'improvement'">[['.I']]</span>
@@ -86,7 +85,7 @@
                             </p>
                         </a>
                     </div>
-                    <div ng-repeat="task in task.subtasks">
+                    <div ng-repeat="task in task.subtasks | orderBy: tasksOrderBy | filter: execTaskFilter">
                         <a ng-if="task.status.label == 'todo'" class="list-group-item" ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]"
                            ng-class="{
                                 'local-red': task.priority.id == 3,
@@ -142,7 +141,7 @@
                         </a>
                     </div>
 
-                    <div ng-repeat="task in task.subtasks">
+                    <div ng-repeat="task in task.subtasks | orderBy: tasksOrderBy | filter: execTaskFilter">
                         <a ng-if="task.status.label == 'in-progress'" class="list-group-item" ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]"
                            ng-class="{
                                 'local-red': task.priority.id == 3,
@@ -198,7 +197,7 @@
                         </a>
                     </div>
 
-                    <div ng-repeat="task in task.subtasks">
+                    <div ng-repeat="task in task.subtasks | orderBy: tasksOrderBy | filter: execTaskFilter">
                         <a ng-if="task.status.label == 'done'" class="list-group-item" ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]"
                            ng-class="{
                                 'local-red': task.priority.id == 3,
