--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -133,7 +133,7 @@
 
                                 <li class="text-center" style="margin-top: 5px;"><b>TASKS  <span style="color: violet;">IN-PROGRESS </span></b></li>
 
-                                {% if taskAssigned | length > 0 %}
+                                {% if tasksAssigned | length > 0 %}
 
                                     {% for task in tasksAssigned | slice(0, 1) %}
                                         <li class="divider"></li>
